# Python-Git-Revision

./: .gitignore  README.md
Django-Practice/: notes.ipynb
Django-Practice/Backend/client_portal/: main.py  pyproject.toml
Django-Practice/Backend/client_portal/client_portal/: settings.py  urls.py
Django-Practice/Backend/client_portal/clients/: models.py  serializers.py  urls.py  views.py
Django-Practice/Backend/client_portal/clients/migrations/: 0001_initial.py
Django-Practice/Backend/client_portal/schoolManagement/: apps.py  models.py  serializers.py  urls.py  views.py
Django-Practice/Backend/client_portal/schoolManagement/migrations/: 0001_initial.py
Django-Practice/Frontend/react/: package-lock.json  package.json  tsconfig.json
Django-Practice/Frontend/react/src/: App.tsx  styles.css
Django-Practice/Frontend/react/src/components/: managementForm.tsx  navbar.tsx  sidebar.tsx
Django-Practice/Frontend/react/src/pages/: ChatBot.tsx  ClientPage.tsx  management.tsx
