[project]
name = "client-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "python-decouple>=3.8",
  "django>=5.0",
  "django-cors-headers>=4.9.0",
  "djangorestframework>=3.16.1",
  "psycopg>=3.3.2",
  "psycopg2-binary>=2.9.11",
]

